<resources>
    <string name="app_name">Tipping</string>
    <!-- names -->
    <string name="bill">Bill</string>
    <string name = "tipPer"> Tip% </string>
    <string name = "size"> Size </string>
    <string name = "tip"> Tip </string>
    <string name = "total"> Total </string>

    <string name = "setting_default_name"> Default </string>
    <string name = "setting_reset"> Reset </string>
    <!-- arrow -->
    <string name="lt">&lt;</string>
    <string name="gt">&gt;</string>


    <!-- tip % -->
    <string name="ten">10</string>
    <string name="fifteen">15</string>
    <string name="twenty">20</string>

    <!-- numbers -->
    <string name="billNum">100.00</string>
    <string name="tipNum">10.00</string>
    <string name="tvTotal">"110.00</string>
    <string name="tipPerNum">0.00</string>
    <string name="sizeNum">1</string>
</resources>
